--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next/font": "^14.2.5",
     "@nextui-org/react": "^2.4.6",
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-switch": "^1.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -25,7 +26,9 @@
     "react-dom": "^18",
     "react-json-view": "^1.21.3",
     "react-markdown": "^9.0.1",
+    "recharts": "^2.13.0",
     "remark-gfm": "^4.0.0",
+    "shadcn-ui": "^0.9.2",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7"
   },
