--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "geist": "^1.3.1",
     "github-markdown-css": "^5.6.1",
     "groq-sdk": "^0.5.0",
+    "jsonrepair": "^3.9.0",
     "lucide-react": "^0.416.0",
     "next": "14.2.5",
     "openai": "^4.53.2",
