--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@anthropic-ai/sdk": "^0.30.0",
     "@next/font": "^14.2.5",
     "@nextui-org/react": "^2.4.6",
+    "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-switch": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.3",
